<resources>
    <string name="app_name">Logica App</string>
    <string name="title">Conjunction (AND)</string>
    <string name="submit">Submit</string>
    <string name="a">A</string>
    <string name="t">T</string>
    <string name="b">B</string>
    <string name="f">F</string>
    <string name="a_b">A ^ B</string>
    <string name="correct">The correct number of answers is: %d</string>
</resources>
